[package]
name = "reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
memoffset = { version = "0.7.1", features = ["unstable_const"] }

[dev-dependencies]
macro_rules_attribute = "0.1.3"
